webadmin: fix misalignment for the Notification Drawer window
There were few misalignment of the Notification Drawer window caused
by updating to patternfly 4:
  1. The title was overlapped by the "Alerts" title area.
  2. The close, widen buttons were shifted too right.
  3. The whole drawer area had left margins.
  4. The 'Display All' Alerts/Events action button had a top margin.

All of those are fixed by this patch.  As many style adjustments as
possible were moved to `_common_base.scss` and `_webadmin_base.scss`.

Bug-Url: https://bugzilla.redhat.com/1752515

--- a/frontend/brands/ovirt-brand/src/main/sass/_webadmin_base.scss
+++ b/frontend/brands/ovirt-brand/src/main/sass/_webadmin_base.scss
@@ -244,3 +244,22 @@ here. Please create new partials when it makes sense.
 .confirmCheckBoxLabel {
     padding-top: 3px;
 }
+
+/*
+  Notification drawer layout overrides (fix for https://gerrit.ovirt.org/106057)
+*/
+.drawer-pf {
+
+  .popover-content {
+      padding: 0;
+  }
+
+  #event_notification_accordion {
+      overflow-y: hidden;
+  }
+
+  .drawer-pf-action .btn-block+.btn-block {
+      margin: 0;
+  }
+
+}
